--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="<%= BASE_URL %>flowplayer/skin/skin.css">
+    <script src="<%= BASE_URL %>flowplayer/flowplayer.min.js"></script>
+    <script src="<%= BASE_URL %>flowplayer/flowplayer.hlsjs.min.js"></script>
     <title>hls-player-test</title>
   </head>
   <body>
